# adeqo-paidads-mcp

./: README.md  app.py  pyproject.toml
ads_mcp/: server.py
ads_mcp/tools/: api.py
tests/: test_server.py
tests/tools/: test_api.py
