[project]
name = "adeqo-paidads-mcp"
version = "0.6.2"
description = "Adeqo Paid Ads MCP server for the Google Ads API."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Beyond Media Global LLC", email = "innovation@bmgww.com" },
]
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["google-ads", "api", "mcp", "gemini", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastmcp>=3.0.2",
    "google-ads==29.1.0",
    "httpx[http2]>=0.28.1",
    "mcp>=1.25.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.3",
    "starlette>=0.47.3",
]

[dependency-groups]
dev = [
    "pyink>=24.10.1",
    "pylint>=3.3.7",
    "pytest>=8.3.2",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=1.1.0",
    "mcp[cli]>=1.25.0",
    "pytest-cov>=7.0.0",
]

[project.urls]
"Homepage" = "https://github.com/Beyond-Media-Global-LLC/adeqo-paidads-mcp"
"Repository" = "https://github.com/Beyond-Media-Global-LLC/adeqo-paidads-mcp"
"Issue Tracker" = "https://github.com/Beyond-Media-Global-LLC/adeqo-paidads-mcp/issues"

[project.scripts]
run-mcp-server = "ads_mcp.server:main"

[tool.pyink]
# Formatting configuration to follow Google style-guide
pyink-indentation = 2
pyink-use-majority-quotes = true
line-length = 79

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv]
package = true

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"ads_mcp" = ["**/*.md", "**/*.yaml", "**/.gitkeep"]
